2005-01-29  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/dialog-hbcitrans.c: Enable debit notes
	again. Various other improvements.

	* src/import-export/hbci/druid-hbci-initial.c (on_aqhbci_button),
	configure.in: Adapt to latest changes in aqbanking; external
	wizard name is no longer hard-coded here but is asked from
	aqbanking.

2005-01-23  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/gncInvoice.c: Properly accumulate
	  splits (bug #165053).  Also fixes a (related) memory leak
	  (caused by the same lack-of-reference to accumulated splits).

2005-01-16  Christian Stimming  <stimming@tuhh.de>

	* src/app-utils/gnc-ui-util.c: Modify tax option code to load
	tax-de_DE module in the appropriate locale.
	
	* src/report/locale-specific/us/gncmod-locale-reports-us.c,
	de_DE.scm: Add scheme module for locale-report/us
	resp. locale-report/de_DE again because it seems to be required.

2005-01-15  Derek Atkins  <derek@ihtfp.com>

	* Neil William's patch to remove static mergeData context.

2005-01-12  Christian Stimming  <stimming@tuhh.de>

	* rpm/gnucash.spec.in, rpm/README: Remove obsolete package
	requirements from rpm spec file. Add warnings about using these
	spec files with caution.

2005-01-10  Christian Stimming  <stimming@tuhh.de>

	* src/engine/guid.h: Fix gcc4 warnings as pointed out by bug
	#162635

	* src/report/locale-specific/us/gncmod-locale-reports-us.c,
	src/tax/us/gncmod-tax-us.c: For German tax categories, make sure
	the module name will match the de_DE locale or will fall back to
	us module name all the time.

2004-12-31  Derek Atkins  <derek@ihtfp.com>

	John Ellson's patch to fix some gcc4 warnings (bug #162582).

	Chris Shoemaker's gnc-trace patch.
	* src/engine/gnc-trace.[ch]:
	  - Recent use of malloc in gnc-trace breaks my compile, use g_malloc
	  - Fix leak of filename mem
	  - add indenting of trace file according to ENTER/LEAVE stack depth