@@ -656,6 +656,11 @@ AC_SUBST(LOCALE_DIR)
 dnl check for nl_langinfo(D_FMT) which is missing on FreeBSD
 LANGINFO_D_FMT_CHECK
 
+dnl Enable locale-specific tax-related information in the accounts
+AC_ARG_ENABLE( locale-specific-tax,
+  [  --enable-locale-specific-tax enable localized tax categories (experimental)],
+  AC_DEFINE(LOCALE_SPECIFIC_TAX,1,Enable the experimental locale-specific tax categories) )
+
 ### --------------------------------------------------------------------------
 ### help files
 
